@@ -1,6 +1,9 @@
 jsoup changelog
 
 *** Release 1.3.4 [2010-Sep-19]
+ * Fixed issue in jsoup.connect when extracting character set from content-type header; now supports quoted
+   charset declaration.
+   
  * Fixed support for jsoup.connect to follow redirects between http & https URLs.
    <http://github.com/jhy/jsoup/issues/issue/37>
 
